--- a/packages/react-signer/package.json
+++ b/packages/react-signer/package.json
@@ -17,7 +17,8 @@
   "version": "0.133.2-3-x",
   "dependencies": {
     "@polkadot/hw-ledger": "^12.6.1",
-    "@polkadot/react-components": "^0.133.2-3-x"
+    "@polkadot/react-components": "^0.133.2-3-x",
+    "flatted": "3.2.9"
   },
   "peerDependencies": {
     "react": "*",
